# quetzal-EGGS

./: .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
quetzal-EGGS-core/: CMakeLists.txt  qegg1.cpp  qegg1.h  utils.h
quetzal-EGGS-core/test/: CMakeLists.txt
quetzal-EGGS-core/test/data/: quetzal_egg_1.config  sample.csv  suitability.tif
src/: CMakeLists.txt  EGG1.cpp  EGG1_context.h  EGG1_database.h  EGG1_options.h  EGG2.cpp  EGG2_context.h  EGG2_database.h  EGG2_options.h  model_1.cpp  model_1.h  model_1_data.cpp  model_1_data.h  model_2.cpp  model_2.h  model_3.cpp  model_3.h  model_3_data.cpp  model_3_data.h  qegg1.cpp  qegg1.h  utils.h
test/: CMakeLists.txt
test/data/: quetzal_EGG1.config  quetzal_EGG2.config  suitability_408_cells.tif
